[metadata]
name = hardening-importer
description = Ingest Iron Bank hardening manifests, produce a build environment.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-2-Clause
license_file = LICENSE
url = https://gitlab.jharmison.com/dco/hardening-importer
author = James Harmison
author_email = jharmison@gmail.com

[options]
python_requires = >= 3.8
package_dir =
    =src
packages = find:
zip_safe = False
install_requires =
    click
    pydantic
    PyYAML
    requests
setup_requires =
    setuptools_scm

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    hardening = hardening_importer.cli:main
